Fix login component text fields horizontal overflow
* Make the login text fields change to a white background color when focused, the same way as those in the register view

--- a/src/frontend/src/app/components/login/login.component.css
+++ b/src/frontend/src/app/components/login/login.component.css
@@ -24,7 +24,6 @@ p {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    width: 300px;
     backdrop-filter: blur(59px);
     
     margin-top: 2%;
@@ -34,28 +33,19 @@ h2 {
   text-align: center;
 }
 
-input[type="text"], input[type="password"], input[type="email"] {
-
+input {
+  background-color: #0D1F23;
   padding: 10px;
   margin: 10px 0;
   border: none;
   border-bottom: 2px solid #AFB2B7;
   border-radius: var(--border-radius);
-  color: #000000;
+  color: #AFB2B7;
   font-size: 16px;
+  width: 20em;
 }
 
 input[type="text"]::placeholder, input[type="password"]::placeholder, input[type="email"]::placeholder {
-  color: #AFB2B7;
-}
-
-.input-field {
-  position: relative;
-}
-
-.input-field i {
-  position: absolute;
-
   color: #AFB2B7;
 }
 
