--- a/src/frontend/src/app/components/register/register.component.css
+++ b/src/frontend/src/app/components/register/register.component.css
@@ -1,4 +1,3 @@
-
 :host {
   margin: auto;
 }
@@ -36,16 +35,17 @@ h2 {
 }
 
 input {
+  background-color: #0D1F23;
   border: none;
   border-bottom: 2px solid #AFB2B7;
   border-radius: 20px;
-  color: #000000;
+  color: #9C9C9C;
   font-size: 16px;
   box-sizing: border-box;
 }
 
 input::placeholder {
-  color: #9c9c9c;
+  color: #9C9C9C;
 }
 
 .role-selection {
